# msc

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: lib.rs  main.rs  types.rs
src/commands/: init.rs  install.rs  mod.rs  publish.rs
src/registry/: mod.rs
