[package]
name = "msc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "msc"
path = "src/main.rs"

[lib]
name = "msc"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
indicatif = "0.17"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
zip = "0.6"
